[package]
name = "vossl"
version = "0.1.0"
authors = ["Alex Krivolutsky <irramail@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-http-server = "14.0"
redis = "0.13.0"

[profile.dev]
opt-level = 3
